<resources>
    <string name="app_name">界面布局分析</string>
    <string name="more">更多</string>
    <string name="exit">退出</string>
    <string name="accessibility_service_description">用于界面布局分析等</string>
    <string name="accessibility_service_label">界面布局分析</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">停止服务</string>
    <string name="click_quickly">请勿连续点击</string>
    <string name="get_accessibility_permission">获取无障碍权限</string>
    <string name="accessibility_permission">无障碍权限</string>
    <string name="get_drawing_permission">获取截图权限</string>
    <string name="float_window_permission">悬浮窗权限</string>
    <string name="root_permission_title">开启Root权限</string>
    <string name="root_permission_content">使用Root，用于获取必需权限，同时获取更多的界面信息，但这通常需要更多的时间</string>
    <string name="get_float_window_permission">获取悬浮窗权限</string>
    <string name="grant_float_window_permission">请找到“界面布局分析” 并打开悬浮窗权限</string>
    <string name="grant_accessibility_service">请找到“界面布局分析” 并打开无障碍功能</string>
    <string name="accessibility_service_off">无障碍功能未开启</string>
    <string name="float_window_service_off">悬浮窗功能未开启</string>
    <string name="accessibility_service_on">无障碍功能已经开启</string>
    <string name="float_window_service_on">悬浮窗功能已经开启</string>
    <string name="getting_app_info">正在获取应用界面信息</string>
    <string name="please_open_accessibility_service">请开启无障碍功能</string>
    <string name="screen_service_label">界面信息采集</string>
    <string name="screen_service_description">收集实时截屏…</string>
    <string name="required_permission">必需权限</string>
    <string name="advanced_function">高级功能</string>
    <string name="allow_permission_by_root">已使用Root功能获取权限</string>
</resources>