<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorThemeBackground"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include_title_bar_first"
            layout="@layout/include_title_bar_first"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp"
                    android:text="@string/required_permission"/>

                <RelativeLayout
                    android:id="@+id/rl_accessibility_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ripple_r0"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_accessibility"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_accessibility"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:id="@+id/ll_accessibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_toEndOf="@+id/iv_accessibility"
                        android:layout_toStartOf="@+id/st_accessibility"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_accessibility"
                            android:text="@string/accessibility_permission"
                            android:textColor="@color/firstTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/st_accessibility"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_float_window_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ripple_r0"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_float_window"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_float_window"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:id="@+id/ll_float_window"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_toEndOf="@+id/iv_float_window"
                        android:layout_toStartOf="@+id/st_float_window"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_float_window"
                            android:text="@string/float_window_permission"
                            android:textColor="@color/firstTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/st_float_window"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp"
                    android:text="@string/advanced_function"/>

                <RelativeLayout
                    android:id="@+id/rl_root_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ripple_r0"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_root_permission"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_root_permission"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:id="@+id/ll_root_permission"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_toEndOf="@+id/iv_root_permission"
                        android:layout_toStartOf="@+id/st_root"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_root_permission_title"
                            android:text="@string/root_permission_title"
                            android:paddingBottom="2dp"
                            android:textColor="@color/firstTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/tv_root_permission_content"
                            android:text="@string/root_permission_content"
                            android:textColor="@color/secondTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/st_root"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/bt_stop_service"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_color_mar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />

    <Button
        android:id="@+id/bt_start_service"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_color_gap"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

</RelativeLayout>